--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@docsector/docsector-reader",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A documentation rendering engine built with Vue 3, Quasar v2 and Vite. Transform Markdown into beautiful, navigable documentation sites.",
   "productName": "Docsector Reader",
   "author": "Rodrigo de Araujo Vieira",
   "license": "MIT",
   "private": false,
+  "readmeFilename": "README.md",
   "type": "module",
   "main": "src/index.js",
   "exports": {
@@ -13,7 +14,7 @@
     "./config": "./docsector.config.js"
   },
   "bin": {
-    "docsector": "./bin/docsector.js"
+    "docsector": "bin/docsector.js"
   },
   "files": [
     "bin/",
