--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docsector/docsector-reader",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "A documentation rendering engine built with Vue 3, Quasar v2 and Vite. Transform Markdown into beautiful, navigable documentation sites.",
   "productName": "Docsector Reader",
   "author": "Rodrigo de Araujo Vieira",
@@ -11,7 +11,14 @@
   "main": "src/index.js",
   "exports": {
     ".": "./src/index.js",
-    "./config": "./docsector.config.js"
+    "./config": "./docsector.config.js",
+    "./quasar-factory": "./src/quasar.factory.js",
+    "./i18n": "./src/i18n/helpers.js",
+    "./boot/store": "./src/boot/store.js",
+    "./boot/QZoom": "./src/boot/QZoom.js",
+    "./boot/i18n": "./src/boot/i18n.js",
+    "./boot/axios": "./src/boot/axios.js",
+    "./src/css/*": "./src/css/*"
   },
   "bin": {
     "docsector": "bin/docsector.js"
@@ -64,7 +71,11 @@
     "vue": "^3.5.13",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.1",
+    "hjson": "^3.2.2",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.6",
+    "prismjs": "^1.27.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^2.1.0",
@@ -76,11 +87,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
-    "hjson": "^3.2.2",
-    "markdown-it": "^13.0.1",
-    "markdown-it-attrs": "^4.1.6",
-    "prettier": "^2.5.1",
-    "prismjs": "^1.27.0"
+    "prettier": "^2.5.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
@@ -94,7 +101,7 @@
     "last 5 Opera versions"
   ],
   "engines": {
-    "node": "^20 || ^18",
+    "node": "^22 || ^20 || ^18",
     "npm": ">= 9"
   }
 }
