--- a/package.json
+++ b/package.json
@@ -62,24 +62,32 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/app-vite": "^2.1.0",
     "@quasar/cli": "^2.5.0",
-    "@quasar/extras": "^1.16.12",
+    "autoprefixer": "^10.4.2",
     "axios": "^1.7.7",
     "core-js": "^3.6.5",
-    "q-colorize-mixin": "^2.0.0-alpha.5",
+    "hjson": "^3.2.2",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.6",
+    "prismjs": "^1.27.0",
+    "q-colorize-mixin": "^2.0.0-alpha.5"
+  },
+  "peerDependencies": {
+    "@quasar/extras": "^1.16.12",
+    "quasar": "^2.16.6",
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.1"
+  },
+  "devDependencies": {
+    "@quasar/extras": "^1.16.12",
     "quasar": "^2.16.6",
     "vue": "^3.5.13",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.1",
-    "hjson": "^3.2.2",
-    "markdown-it": "^13.0.1",
-    "markdown-it-attrs": "^4.1.6",
-    "prismjs": "^1.27.0",
-    "@quasar/app-vite": "^2.1.0",
-    "autoprefixer": "^10.4.2"
-  },
-  "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.19.1",
